--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,9 @@ dependencies {
     compile group: 'org.springframework', name: 'spring-core', version: '4.3.18.RELEASE'
     compile group: 'org.springframework', name: 'spring-beans', version: '4.3.18.RELEASE'
     compile group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.5.0'
-    compile group: 'org.elasticsearch.client', name: 'transport', version: '5.5.0'
-    compile group: 'org.elasticsearch', name: 'elasticsearch', version: '5.5.0'
+    compile group: 'org.elasticsearch.client', name: 'transport', version: '5.6.0'
+    compile group: 'org.elasticsearch', name: 'elasticsearch', version: '5.6.0'
     compile group: 'org.springframework', name: 'spring-context', version: '4.3.4.RELEASE'
+    compile group: 'org.apache.kafka', name: 'kafka_2.12', version: '1.0.1'
 
 }
