--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,9 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    maven {
+        url "https://artifacts.elastic.co/maven"
+    }
 }
 
 dependencies {
@@ -20,5 +23,8 @@ dependencies {
     compile group: 'org.elasticsearch', name: 'elasticsearch', version: '5.6.0'
     compile group: 'org.springframework', name: 'spring-context', version: '4.3.4.RELEASE'
     compile group: 'org.apache.kafka', name: 'kafka_2.12', version: '1.0.1'
+    compile group: 'org.elasticsearch.client', name: 'x-pack-transport', version: '5.6.0'
+    compile group: 'org.postgresql', name: 'postgresql', version: '42.2.2'
+    compile group: 'org.springframework', name: 'spring-jdbc', version: '4.3.18.RELEASE'
 
 }
