--- a/build.gradle
+++ b/build.gradle
@@ -26,5 +26,6 @@ dependencies {
     compile group: 'org.elasticsearch.client', name: 'x-pack-transport', version: '5.6.0'
     compile group: 'org.postgresql', name: 'postgresql', version: '42.2.2'
     compile group: 'org.springframework', name: 'spring-jdbc', version: '4.3.18.RELEASE'
+    compile 'javax.management:jmxri:1.2.1'
 
 }
