--- a/build.gradle
+++ b/build.gradle
@@ -2,24 +2,16 @@ buildscript {
     repositories {
         jcenter()
     }
-
-    dependencies {
-        classpath 'com.netflix.nebula:gradle-ospackage-plugin:3.4.0'
-    }
 }
 
 plugins {
-    id 'nebula.ospackage' version '3.4.0'
+    id "nebula.ospackage" version "5.2.0"
     id 'java'
+    id 'application'
 }
 
-jar {
-    manifest {
-        attributes 'Main-Class' : 'main.SendMessages'
-    }
-    from {
-        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-    }
+application {
+    mainClassName = 'main.SendMessages'
 }
 
 repositories {
@@ -43,7 +35,6 @@ dependencies {
     compile group: 'org.springframework', name: 'spring-jdbc', version: '4.3.18.RELEASE'
 }
 
-
 ospackage {
     packageName = 'vlotot'
     version = '1.0.0'
@@ -64,10 +55,6 @@ ospackage {
     from('src/main/resources/scripts') {
         into 'bin'
     }
-}
-
-buildRpm {
-    link('/usr/local/bin/vlotot', '/opt/vlotot/bin/vlotot.sh')
 }
 
 task dockerBuild(type:Exec) {
