--- a/build.gradle
+++ b/build.gradle
@@ -59,7 +59,9 @@ ospackage {
     from(jar.outputs.files) {
         into ''
     }
-
+    from("$project.rootDir/startUpScript.sh") {
+        into ''
+    }
     from("$project.buildDir/scripts") {
         into 'bin'
     }
@@ -76,21 +78,3 @@ task dockerStart(type: Exec) {
     commandLine 'docker-compose', '-f', 'docker-compose.yml', 'up'
 }
 
-task  ip() {
-    getLocalIP()
-}
-
-def getLocalIP() {
-    Enumeration<NetworkInterface> interfaces = NetworkInterface.getNetworkInterfaces()
-    while (interfaces.hasMoreElements()) {
-        NetworkInterface nextNetworkInterface = interfaces.nextElement()
-        Enumeration<InetAddress> inetAddresses = nextNetworkInterface.getInetAddresses()
-        while (inetAddresses.hasMoreElements()) {
-            InetAddress localAddress = inetAddresses.nextElement()
-            if (!localAddress.isLinkLocalAddress()) {
-                print(localAddress.getHostAddress())
-            }
-        }
-    }
-    return InetAddress.getLocalHost().getHostAddress()
-}
