--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,12 +50,13 @@ services:
     build: .
     stdin_open: true
     tty: true
-    user: "appuser"
+    user: appuser
+    command: ./startUpScript.sh
     depends_on:
       - zookeeper
+      - kafka
       - kibana
       - db
       - elasticsearch
     ports:
       - "5000:5000"
-
