--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,14 @@ version: '3.5'
 services:
   zookeeper:
     image: zookeeper:3.4.9
+    container_name: zookeeper
     ports:
       - "2181:2181"
 
   kafka:
     image: wurstmeister/kafka:2.12-2.0.1
+    container_name: kafka
+    hostname: kafka
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ADVERTISED_HOST_NAME: kafka
@@ -20,6 +23,7 @@ services:
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:5.6.0
+    container_name: elasticsearch
     environment:
       - cluster.name=KafkaESCluster
       - xpack.security.enabled=false
@@ -33,6 +37,7 @@ services:
 
   kibana:
     image: docker.elastic.co/kibana/kibana:5.6.0
+    container_name: kibana
     depends_on:
       - elasticsearch
     ports:
@@ -40,6 +45,7 @@ services:
 
   db:
     image: postgres
+    container_name: db
     ports:
       - "5432:5432"
     environment:
@@ -47,6 +53,7 @@ services:
       POSTGRES_PASSWORD: "postgres"
 
   app_consumer:
+    container_name: consumer
     build: .
     stdin_open: true
     tty: true
@@ -55,8 +62,8 @@ services:
     environment:
       WAIT_HOSTS: db:5432, kibana:5601, elasticsearch:9300, kafka:9092, zookeeper:2181
 
-
   app_producer:
+    container_name: producer
     build: .
     stdin_open: true
     tty: true
