--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,9 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+//    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.testng', name: 'testng', version: '6.14.3'
+
     compile group: 'org.springframework', name: 'spring-core', version: '4.3.18.RELEASE'
     compile group: 'org.springframework', name: 'spring-beans', version: '4.3.18.RELEASE'
     compile group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.5.0'
@@ -33,6 +35,8 @@ dependencies {
     compile group: 'org.elasticsearch.client', name: 'x-pack-transport', version: '5.6.0'
     compile group: 'org.postgresql', name: 'postgresql', version: '42.2.2'
     compile group: 'org.springframework', name: 'spring-jdbc', version: '4.3.18.RELEASE'
+    compile group: 'org.apache.kafka', name: 'kafka-streams', version: '1.0.0'
+
 }
 
 jar {
